--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
 <head>
 	<title>GIT GITHUB</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
 </head>
 <body>
 	<h1>hola bienbenidos a git github</h1>
-
+	<form class="pure-form">
+		<fieldset>
+			<legend>A compact inline form</legend>
+			<input type="email" placeholder="Email" />
+			<input type="password" placeholder="Password" />
+			<label for="default-remember">
+				<input type="checkbox" id="default-remember" /> Remember me
+			</label>
+			<button type="submit" class="pure-button pure-button-primary">Sign in</button>
+		</fieldset>
+	</form>
 </body>
 </html>
