--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>GIT GITHUB</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+	<style>
+		input[type=text]{
+			width: 100%;
+		}
+	</style>
 </head>
 <body>
 	<h1>hola bienbenidos a git github</h1>
@@ -17,5 +22,6 @@
 			<button type="submit" class="pure-button pure-button-primary">Sign in</button>
 		</fieldset>
 	</form>
+
 </body>
 </html>
